Added the sign-in view.

--- a/react-node-app/html/index.html
+++ b/react-node-app/html/index.html
@@ -13,6 +13,7 @@
         </div> <!-- /container -->
 
 		<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-		<script type="text/babel" src="main.jsx"></script>
+		<script type="text/babel" src="main.jsx">
+    </script>
 	</body>
 </html>
